--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Created by https://www.toptal.com/developers/gitignore/api/windows,visualstudiocode,django
 # Edit at https://www.toptal.com/developers/gitignore?templates=windows,visualstudiocode,django
 
+bin/
+
 ### Django ###
 *.log
 *.pot
